Remove linux/arm/v7 from build matrix   * qemu: uncaught target signal 11 (Segmentation fault)

--- a/.github/workflows/centos-7.yml
+++ b/.github/workflows/centos-7.yml
@@ -28,5 +28,5 @@ jobs:
           docker buildx build \
             --file ./centos-7.Dockerfile ./ \
             --output "type=image,push=true" \
-            --platform linux/amd64,linux/arm64,linux/arm/v7 \
+            --platform linux/amd64,linux/arm64 \
             --tag dhoppeit/docker-centos-systemd:7
